# deltamusic

./: Dockerfile  config.py  pyproject.toml  requirements.txt  run_dashboard.py  sample.env  start
anony/: __init__.py  __main__.py
anony/core/: calls.py  mongo.py  mongo_extended.py  telegram.py
anony/dashboard/: README.md  server.py
anony/helpers/: __init__.py  _admins.py  _cleanup.py  _decorators.py  _inline.py  _lyrics.py  _play.py  _thumbnails.py  _utilities.py
anony/locales/: id.json
anony/plugins/: __init__.py  active.py  antipm.py  auth.py  blacklist.py  callbacks.py  donate.py  eval.py  play.py  queue.py  restart.py  seek.py  skip.py  song.py  start.py  stats.py  sudoers.py
anony/plugins/admin/: __init__.py  auth.py  blacklist.py  broadcast.py  eval.py  restart.py  system.py
anony/plugins/core/: antipm.py  callbacks.py  misc.py
anony/plugins/dramabox/: __init__.py  api.py  drama.py
anony/plugins/playback/: __init__.py  pause.py  play.py  queue.py  resume.py  settings.py  shuffle.py  skip.py  stop.py
anony/plugins/user/: __init__.py  active.py  dashboard.py  donate.py  lyrics.py  ping.py  playlist.py  song.py  start.py  stats.py
dashboard/: index.html  miniapp.html  server.py
delta/: __init__.py  __main__.py
delta/core/: bot.py  calls.py  dir.py  mongo.py  mongo_extended.py  telegram.py  userbot.py  youtube.py
delta/dashboard/: README.md  index.html  manifest.json  miniapp.html  requirements.txt  server.py
delta/helpers/: __init__.py  _admins.py  _filters.py  _graceful.py  _inline.py  _play.py  _thumb.py  _thumbnails.py  _utilities.py
(+31 files in other folders)
