[project]
name = "deltamusic"
version = "3.0.1"
description = "Production-ready Telegram music bot with dashboard support."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "aiohttp~=3.13.2",
    "fastapi>=0.125.0",
    "kurigram>=2.2.15",
    "motor>=3.7.1",
    "pillow~=12.0.0",
    "psutil~=7.1.3",
    "py-tgcalls~=2.2.8",
    "py-yt-search~=0.5.5",
    "pydantic>=2.12.5",
    "python-dotenv~=1.2.1",
    "pytgcrypto>=1.2.11",
    "uvicorn[standard]>=0.38.0",
    "yt-dlp[default]>=2025.12.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
